# rust-chat

./: Dockerfile
client/: Cargo.toml
client/src/: app.rs  client.rs  main.rs
docker/: .gitignore  deploy.sh  docker-compose.yml  exclude.txt  sync-services.sh
docker/nginx/conf.d/: ws-server.conf
proto/: Cargo.toml
proto/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  server.rs  session.rs
