[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto" }
anyhow = "1.0.75"
crossterm = { version = "0.27" }
futures-util = { version = "0.3.29", default-features = false, features = [
    "std",
] }
log = "0.4.20"
ratatui = { version = "0.24.0", features = ["crossterm", "underline-color"] }
tokio = { version = "1.34.0", features = ["full"] }
url = "2.5.0"
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
futures-channel = "0.3.29"
